# fx-anomaly-detector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: logging_config.py  settings.py
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_detector_calibration.ipynb  04_backtest_results.ipynb
scripts/: calibrate.py  generate_report.py  run_detector.py
src/alerts/: engine.py  notifier.py  severity.py
src/backtest/: engine.py  metrics.py  reporter.py
src/dashboard/: app.py
src/data/: feature_store.py  fetcher.py  preprocessor.py
src/detectors/: __init__.py  autoencoder.py  cointegration.py  ensemble.py  ml_unsupervised.py  regime.py  statistical.py
src/features/: builder.py  cross_pair.py  macro.py  microstructure.py  returns.py  volatility.py
src/risk/: drawdown.py  position_sizing.py  var.py
tests/: conftest.py  test_backtest.py  test_detectors.py  test_features.py  test_integration.py  test_risk.py
