[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-anomaly-detector"
version = "1.0.0"
description = "Production-grade FX anomaly detection system combining statistical methods, machine learning, and regime analysis for G10 currency pairs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Uchenna Ejike" }]

[tool.setuptools]
packages = ["config", "src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.coverage.run]
omit = ["src/dashboard/*"]
